--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-auth-app",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
