--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "axios": "^1.9.0",
-    "express": "^4.18.2",
-    "openai": "^4.97.0",
-    "pg": "^8.15.6"
+  cors": "^2.8.5",
+  "dotenv": "^16.4.5",
+  "express": "^4.18.2",
+  "pg": "^8.11.3"
   }
 }
