--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "my-auth-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend server for Cryptess MVP",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  cors": "^2.8.5",
-  "dotenv": "^16.4.5",
-  "express": "^4.18.2",
-  "pg": "^8.11.3"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "pg": "^8.15.6"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
